--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=./docs/toolz/">
-  <title>Redirecting...</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Toolz</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
-<body>
-  <p>Redirecting to <a href="./docs/toolz/">Toolz</a>...</p>
+<body class="bg-gray-100 text-gray-900">
+  <div class="container mx-auto p-4">
+    <header class="mb-4">
+      <h1 class="text-3xl font-bold">Toolz</h1>
+      <p class="text-sm text-gray-600">Browser-native AI tools</p>
+    </header>
+    <section class="mb-4">
+      <label class="flex items-center space-x-2">
+        <input type="checkbox" id="performanceToggle" class="form-checkbox" />
+        <span>Performance Mode</span>
+      </label>
+    </section>
+    <section id="tools" class="space-y-4"></section>
+  </div>
+  <script type="module" src="./js/main.js"></script>
 </body>
 </html>
