--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
-<body class="bg-gray-100 text-gray-900">
+<body class="bg-gray-900 text-gray-100">
   <div class="container mx-auto p-4">
     <header class="mb-4">
       <h1 class="text-3xl font-bold">Toolz</h1>
@@ -18,13 +18,14 @@
         <input type="checkbox" id="performanceToggle" class="form-checkbox" />
         <span>Performance Mode</span>
       </label>
+      <p class="text-xs text-gray-400">When disabled, agents run locally. Enabling may use cloud fallbacks for better performance.</p>
     </section>
     <section class="mb-4 flex items-center space-x-2">
       <select id="agentSelect" class="border p-2"></select>
       <button id="runButton" class="bg-blue-500 text-white px-2 py-1">Run</button>
     </section>
-    <textarea id="inputText" class="w-full border p-2" rows="4" placeholder="Type your request here..."></textarea>
-    <pre id="outputArea" class="mt-2 bg-gray-100 p-2"></pre>
+    <textarea id="inputText" class="w-full border p-2 bg-gray-800 text-gray-100" rows="4" placeholder="Type your request here..."></textarea>
+    <pre id="outputArea" class="mt-2 bg-gray-800 p-2"></pre>
   </div>
   <script type="module" src="./js/simple_ui.js"></script>
 </body>
