Add status terminal under model selector

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <select id="agentSelect" class="border p-2"></select>
       <button id="runButton" class="bg-blue-500 text-white px-2 py-1">Run</button>
     </section>
+    <pre id="statusTerminal" class="mb-2 bg-gray-800 p-2 text-xs h-16 overflow-y-auto font-mono text-green-400"></pre>
     <p class="text-xs text-gray-400 mb-4">Select a tool, enter text, then press
       <strong>Run</strong> to execute the agent.</p>
     <textarea id="inputText" class="w-full border p-2 bg-gray-800 text-gray-100" rows="4" placeholder="Type your request here..."></textarea>
