--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <select id="agentSelect" class="border p-2 bg-gray-800 text-gray-100"></select>
       <button id="runButton" class="bg-blue-500 text-white px-2 py-1">Run</button>
     </section>
-      <p id="instructionBox" class="text-xs text-gray-400 mb-2"></p>
+    <div id="statusPanel" class="text-sm text-blue-400 h-5"></div>
+    <p id="instructionBox" class="text-xs text-gray-400 mb-2"></p>
     <p class="text-xs text-gray-400 mb-4">Select a tool, enter text, then press
       <strong>Run</strong> to execute the agent.</p>
     <textarea id="inputText" class="w-full border p-2 bg-gray-800 text-gray-100" rows="4" placeholder="Type your request here..."></textarea>
